# seat-occupancy-detector

./: CMakeLists.txt  README.md  main.cpp
src/: AppHeaders.hpp  CMakeLists.txt  app.hpp
src/app/: Application.cpp  FaceDetect.cpp
src/include/: Application.hpp  Common.hpp  FaceDetect.hpp  Log.hpp
src/utils/: Log.cpp
